@@ -54,7 +54,8 @@ ttHMultileptonLooseEventSaver::ttHMultileptonLooseEventSaver() :
   m_truthMET_px(-999.0),
   m_truthMET_py(-999.0),
   m_truthMET_phi(-999.0),
-  m_truthMET_sumet(-1.0)
+  m_truthMET_sumet(-1.0),
+  m_sherpaRW("PMGSherpa22VJetsWeightTool")
 {}
 
 ttHMultileptonLooseEventSaver::~ttHMultileptonLooseEventSaver(){}
@@ -166,7 +167,11 @@ void ttHMultileptonLooseEventSaver::initialize(std::shared_ptr<top::TopConfig> c
 
   m_classifyttbarHF = new ttHMultilepton::ClassifyHF("AntiKt4TruthJets");
 
-  m_sherpaRW = new PMGCorrsAndSysts(false);
+  //m_sherpaRW = new PMGCorrsAndSysts(false);
+
+  if (m_isMC){
+    top::check(m_sherpaRW.retrieve(), "Failed to retrieve PMGSherpa22VJetsWeightTool");
+  }
 
   //prepare btag eigen vectors
   if (m_isMC) {
@@ -1085,14 +1090,17 @@ void ttHMultileptonLooseEventSaver::saveEvent(const top::Event& event){
 				     ( m_mcChannelNumber >= 363361 and m_mcChannelNumber <= 363483 )
 				     )
       ) {
-      const xAOD::JetContainer* truthJets(nullptr);
-      top::check( evtStore()->retrieve(truthJets, "AntiKt4TruthJets"), "Failed to retrieve AntiKt4TruthWZJets for Sherpa reweighting." );
-
-      uint nTruthJets = truthSelector.CountJets(truthJets, event.m_truth);
-
-      event.m_info->auxdecor<float>("TTHML_SherpaNJetRW") = m_sherpaRW->Get_Sherpa22VJets_NJetCorrection(nTruthJets);
-      event.m_info->auxdecor<int>("TTHML_NTruthJet") = nTruthJets;
-    }
+    const xAOD::JetContainer* truthJets(nullptr);
+    top::check( evtStore()->retrieve(truthJets, "AntiKt4TruthJets"), "Failed to retrieve AntiKt4TruthWZJets for Sherpa reweighting." );
+    
+    uint nTruthJets = truthSelector.CountJets(truthJets, event.m_truth);
+    //event.m_info->auxdecor<float>("TTHML_SherpaNJetRW") = m_sherpaRW->Get_Sherpa22VJets_NJetCorrection(nTruthJets);
+    event.m_info->auxdecor<int>("TTHML_NTruthJet") = nTruthJets;
+    
+    double sherpa_weight = m_sherpaRW->getWeight();
+    event.m_info->auxdecor<double>("TTHML_SherpaNJetRW") = sherpa_weight;
+    
+  }
 
   //Event selection variable for each event selection region (pass/fail)
   recordSelectionDecision(event);
