@@ -25,7 +25,7 @@
 #include "IsolationSelection/IsolationSelectionTool.h"
 
 //Sherpa 2.2 reweight
-#include "PMGTools/PMGCorrsAndSysts.h"
+#include "PMGTools/PMGSherpa22VJetsWeightTool.h"
 
 // Local and Top analysis
 #include "TopAnalysis/EventSaverFlatNtuple.h"
@@ -217,7 +217,8 @@ class ttHMultileptonLooseEventSaver : public top::EventSaverFlatNtuple {
   ttHMultilepton::ClassifyHF* m_classifyttbarHF;
 
   //sherpa RW
-  PMGCorrsAndSysts* m_sherpaRW;
+  //PMGCorrsAndSysts* m_sherpaRW;
+  ToolHandle<PMGSherpa22VJetsWeightTool> m_sherpaRW;
 
   //MC
   int   m_higgsMode;
