@@ -1,3 +1,8 @@
+2016-07-16 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
+	* Move to AT,2.4.15
+	* New PMGTool Z+jets Sherpa 2.2 RW functions - WARNING: not fully working!
+	* New 2016 GRL (for lumi < 1e34)
+
 2016-07-04 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
 	* Revert to modified ASG OLR (MuJetPtRatio and MuJetTrkPtRatio disabled)
 	* Include new MuonEfficiencyCorrections and IsolationCorrections locally
